--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,14 @@ body {
 }
 
 #side_logo {
+  margin: 0;
+  width: auto;
   flex: 1 1 0;
+  background-color: black;
+  opacity: .75;
+}
+
+#side_logo_image  {
   margin: auto;
   text-align: center;
   display: flex;
@@ -35,8 +42,14 @@ body {
   width: 50px;
 }
 
+#odin_image_box {
+  flex: 1 1 0;
+  text-align: right;
+}
+
 #odin_text {
-  text-align: center;
+  flex: 1 1 0;
+  text-align: left;
   margin: auto;
   font-family: Norse;
   font-size: 50px;
@@ -49,28 +62,42 @@ body {
   flex: 2 1 auto;
   display:flex;
   flex-direction: column;
-  margin: 25px;
+  margin: 0px;
+}
+#form_background1{
+  flex: 1 1 0;
+  background-color: #f9f8f6;
+}
+
+#form_background2 {
+  flex: 1 1 0;
+}
+
+#form_background3 {
+  flex: 1 1 0;
+  background-color: #f9f8f6;
 }
 
 #form_text {
-  flex: 1 1 0;
   margin-top: 50px;
   margin-right: 50px;
   font-weight:550;
   font-size:small;
+  padding: 20px;
 }
 
 #form_input {
-  flex: 1 1 0;
   display: flex;
   flex-direction: column;
+  box-shadow: 2px 2px lightgrey;
+  padding: 20px;
 }
 
 #form_top_text {
   flex: 1 1 0;
 }
 
-#form_name, #form_contact {
+#form_name, #form_contact, #form_password{
   flex: 1 1 0;
   display: flex;
 }
@@ -82,7 +109,8 @@ body {
   font-size: small;
 }
 #form_button {
-  flex: 1 1 0;
+  margin-top: 10px;
+  padding: 20px;
 }
 
 @font-face {
@@ -98,5 +126,23 @@ input {
   height: 15px;
   margin-right: 10px;
   width: 200px;
+}
+
+button {
+  width: 100px;
+  font-size: 10px;
+  border-radius: 5px;
+  background-color: #596D48;
+  color: white;
+  padding: 5px;
+}
+
+#form_button p {
+  font-size: 10px;
+}
+
+.green {
+  color: #596D48;
+  margin-left: 5px;
 }
 
